[gd_scene load_steps=22 format=4 uid="uid://mmidqx2cwf8l"]

[ext_resource type="TileSet" uid="uid://cs34vyt8rsjpu" path="res://scenes/ui/UI.tres" id="1_4jywj"]
[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_xnh1i"]
[ext_resource type="Shader" path="res://scenes/ui/main_menu.gdshader" id="2_5efyl"]
[ext_resource type="FontFile" uid="uid://0o30bdwr77j7" path="res://assets/UI/DigitalDisco.ttf" id="2_26f8l"]
[ext_resource type="LabelSettings" uid="uid://dm0xx5p44xyip" path="res://scenes/ui/button_settings_bale.tres" id="3_0qhfd"]
[ext_resource type="Texture2D" uid="uid://j26qv8t4fgit" path="res://assets/UI/menu_background.png" id="3_h6ojc"]
[ext_resource type="Texture2D" uid="uid://dmrpgtgv22gff" path="res://assets/UI/togglebutton_selected.png" id="4_qdhhj"]
[ext_resource type="FontFile" uid="uid://xk83o120lw7e" path="res://assets/UI/DigitalDisco-Thin.ttf" id="4_yxss7"]
[ext_resource type="Texture2D" uid="uid://c1jh3b72jqmbc" path="res://assets/UI/slider_grabber.png" id="6_y8xgh"]
[ext_resource type="Texture2D" uid="uid://bsm233xu5600n" path="res://assets/UI/slider_texture.png" id="7_c3uyr"]
[ext_resource type="Texture2D" uid="uid://c6m8fysueyk5y" path="res://assets/UI/slider_grabber_highlight.png" id="7_uhyb4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_30lb2"]
shader = ExtResource("2_5efyl")
shader_parameter/speed = 0.02

[sub_resource type="LabelSettings" id="LabelSettings_kutdc"]
font = ExtResource("4_yxss7")
font_size = 40
shadow_color = Color(0.258824, 0.258824, 0.258824, 0.745098)
shadow_offset = Vector2(0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_eg4w2"]
font = ExtResource("2_26f8l")
font_size = 14
shadow_color = Color(0.227451, 0.227451, 0.227451, 0.898039)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r3tvi"]
texture = ExtResource("7_c3uyr")
texture_margin_left = 80.0
texture_margin_top = 8.0
texture_margin_bottom = 8.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3nawr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yqvs0"]

[sub_resource type="LabelSettings" id="LabelSettings_td363"]
font = ExtResource("2_26f8l")
font_size = 14
shadow_color = Color(0.227451, 0.227451, 0.227451, 0.898039)
shadow_offset = Vector2(0, 1)

[sub_resource type="Animation" id="Animation_ov0ya"]
resource_name = "toOptions"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-320, 0)]
}

[sub_resource type="Animation" id="Animation_layvd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lqtdj"]
_data = {
"RESET": SubResource("Animation_layvd"),
"toOptions": SubResource("Animation_ov0ya")
}

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_xnh1i")

[node name="TEMP" type="Sprite2D" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_30lb2")
position = Vector2(160, 90)
texture = ExtResource("3_h6ojc")
region_enabled = true
region_rect = Rect2(0, -201.845, 1191.54, 393.845)

[node name="GameTitle" type="Label" parent="."]
offset_left = 47.0
offset_right = 277.0
offset_bottom = 104.0
text = "Storm 
Guardians"
label_settings = SubResource("LabelSettings_kutdc")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BGButtons" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAMAA8AAAATAA4AAAAMABIAAAATAA4AAAANAA8AAAATAA4AAAANABIAAAATAA4AAAAOAA8AAAATAA4AAAAOABIAAAATAA4AAAAPAA8AAAATAA4AAAAPABIAAAATAA4AAAAQAA8AAAATAA4AAAAQABIAAAATAA4AAAARAA8AAAATAA4AAAARABIAAAATAA4AAAASAA8AAAATAA4AAAASABIAAAATAA4AAAATAA8AAAATAA4AAAAUAA8AAAATAA4AAAAVAA8AAAATAA4AAAAWAA8AAAATAA4AAAAXAA8AAAATAA4AAAAXABIAAAATAA4AAAAYAA8AAAATAA4AAAAYABIAAAATAA4AAAAZAA8AAAATAA4AAAAZABIAAAATAA4AAAAaAA8AAAATAA4AAAAaABIAAAATAA4AAAAbAA8AAAATAA4AAAAbABIAAAATAA4AAAAMAA4AAAATAA4AAAAMABEAAAATAA4AAAANAA4AAAATAA4AAAANABEAAAATAA4AAAAOAA4AAAATAA4AAAAOABEAAAATAA4AAAAPAA4AAAATAA4AAAAPABEAAAATAA4AAAAQAA4AAAATAA4AAAAQABEAAAATAA4AAAARAA4AAAATAA4AAAARABEAAAATAA4AAAASAA4AAAATAA4AAAASABEAAAATAA4AAAATAA4AAAATAA4AAAAUAA4AAAATAA4AAAAVAA4AAAATAA4AAAAWAA4AAAATAA4AAAAXAA4AAAATAA4AAAAXABEAAAATAA4AAAAYAA4AAAATAA4AAAAYABEAAAATAA4AAAAZAA4AAAATAA4AAAAZABEAAAATAA4AAAAaAA4AAAATAA4AAAAaABEAAAATAA4AAAAbAA4AAAATAA4AAAAbABEAAAATAA4AAAATABEAAAATAA4AAAAUABEAAAATAA4AAAATABIAAAATAA4AAAAUABIAAAATAA4AAAALAA0AAAASAA0AAAAMAA0AAAATAA0AAAANAA0AAAATAA0AAAAOAA0AAAATAA0AAAAPAA0AAAATAA0AAAAQAA0AAAATAA0AAAARAA0AAAATAA0AAAASAA0AAAATAA0AAAATAA0AAAATAA0AAAAUAA0AAAATAA0AAAAVAA0AAAATAA0AAAAWAA0AAAATAA0AAAAXAA0AAAATAA0AAAAYAA0AAAATAA0AAAAZAA0AAAATAA0AAAAaAA0AAAATAA0AAAAbAA0AAAATAA0AAAAcAA0AAAAUAA0AAAAcAA4AAAAUAA4AAAAcAA8AAAAUAA4AAAAcABAAAAAUAA4AAAAcABEAAAAUAA4AAAAcABIAAAAUAA4AAAAcABMAAAAUAA4AAAAbABMAAAATAA4AAAAaABMAAAATAA4AAAAZABMAAAATAA4AAAAYABMAAAATAA4AAAAXABMAAAATAA4AAAAWABMAAAATAA4AAAAVABMAAAATAA4AAAAUABMAAAATAA4AAAATABMAAAATAA4AAAASABMAAAATAA4AAAARABMAAAATAA4AAAAQABMAAAATAA4AAAAPABMAAAATAA4AAAAOABMAAAATAA4AAAANABMAAAATAA4AAAAMABMAAAATAA4AAAALABMAAAASAA4AAAALAA4AAAASAA4AAAALAA8AAAASAA4AAAALABAAAAASAA4AAAALABEAAAASAA4AAAALABIAAAASAA4AAAAcABQAAAAUAA8AAAALABQAAAASAA8AAAAMABQAAAATAA8AAAANABQAAAATAA8AAAAOABQAAAATAA8AAAAPABQAAAATAA8AAAAQABQAAAATAA8AAAARABQAAAATAA8AAAASABQAAAATAA8AAAATABQAAAATAA8AAAAUABQAAAATAA8AAAAVABQAAAATAA8AAAAWABQAAAATAA8AAAAXABQAAAATAA8AAAAYABQAAAATAA8AAAAZABQAAAATAA8AAAAaABQAAAATAA8AAAAbABQAAAATAA8AAAAMABAAAAATAA4AAAANABAAAAATAA4AAAAOABAAAAATAA4AAAAPABAAAAATAA4AAAARABAAAAATAA4AAAASABAAAAATAA4AAAAQABAAAAATAA4AAAAbABAAAAATAA4AAAAWABIAAAATAA4AAAAVABIAAAATAA4AAAAUABAAAAATAA4AAAATABAAAAATAA4AAAAVABAAAAATAA4AAAAVABEAAAATAA4AAAAWABAAAAATAA4AAAAXABAAAAATAA4AAAAYABAAAAATAA4AAAAWABEAAAATAA4AAAAZABAAAAATAA4AAAAaABAAAAATAA4AAAAxAAcAAAASAA0AAAAxAAgAAAASAA4AAAAxAAkAAAASAA4AAAAxAAoAAAASAA4AAAAxAAsAAAASAA4AAAAxAAwAAAASAA4AAAAyAAcAAAATAA0AAAAyAAgAAAATAA4AAAAyAAkAAAATAA4AAAAyAAoAAAATAA4AAAAyAAsAAAATAA4AAAAyAAwAAAATAA4AAAAzAAcAAAATAA0AAAAzAAgAAAATAA4AAAAzAAkAAAATAA4AAAAzAAoAAAATAA4AAAAzAAsAAAATAA4AAAAzAAwAAAATAA4AAAA0AAcAAAATAA0AAAA0AAgAAAATAA4AAAA0AAkAAAATAA4AAAA0AAoAAAATAA4AAAA0AAsAAAATAA4AAAA0AAwAAAATAA4AAAA1AAcAAAATAA0AAAA1AAgAAAATAA4AAAA1AAkAAAATAA4AAAA1AAoAAAATAA4AAAA1AAsAAAATAA4AAAA1AAwAAAATAA4AAAA2AAcAAAATAA0AAAA2AAgAAAATAA4AAAA2AAkAAAATAA4AAAA2AAoAAAATAA4AAAA2AAsAAAATAA4AAAA2AAwAAAATAA4AAAA3AAcAAAATAA0AAAA3AAgAAAATAA4AAAA3AAkAAAATAA4AAAA3AAoAAAATAA4AAAA3AAsAAAATAA4AAAA3AAwAAAATAA4AAAA4AAcAAAATAA0AAAA4AAgAAAATAA4AAAA4AAkAAAATAA4AAAA4AAoAAAATAA4AAAA4AAsAAAATAA4AAAA4AAwAAAATAA4AAAA5AAcAAAATAA0AAAA5AAgAAAATAA4AAAA5AAkAAAATAA4AAAA5AAoAAAATAA4AAAA5AAsAAAATAA4AAAA5AAwAAAATAA4AAAA6AAcAAAATAA0AAAA6AAgAAAATAA4AAAA6AAkAAAATAA4AAAA6AAoAAAATAA4AAAA6AAsAAAATAA4AAAA6AAwAAAATAA4AAAA7AAcAAAATAA0AAAA7AAgAAAATAA4AAAA7AAkAAAATAA4AAAA7AAoAAAATAA4AAAA7AAsAAAATAA4AAAA7AAwAAAATAA4AAAA8AAcAAAATAA0AAAA8AAgAAAATAA4AAAA8AAkAAAATAA4AAAA8AAoAAAATAA4AAAA8AAsAAAATAA4AAAA8AAwAAAATAA4AAAA9AAcAAAATAA0AAAA9AAgAAAATAA4AAAA9AAkAAAATAA4AAAA9AAoAAAATAA4AAAA9AAsAAAATAA4AAAA9AAwAAAATAA4AAAA+AAcAAAATAA0AAAA+AAgAAAATAA4AAAA+AAkAAAATAA4AAAA+AAoAAAATAA4AAAA+AAsAAAATAA4AAAA+AAwAAAATAA4AAAA/AAcAAAATAA0AAAA/AAgAAAATAA4AAAA/AAkAAAATAA4AAAA/AAoAAAATAA4AAAA/AAsAAAATAA4AAAA/AAwAAAATAA4AAABAAAcAAAATAA0AAABAAAgAAAATAA4AAABAAAkAAAATAA4AAABAAAoAAAATAA4AAABAAAsAAAATAA4AAABAAAwAAAATAA4AAABBAAcAAAATAA0AAABBAAgAAAATAA4AAABBAAkAAAATAA4AAABBAAoAAAATAA4AAABBAAsAAAATAA4AAABBAAwAAAATAA4AAABBAA0AAAATAA8AAABBAA4AAAAPAA4AAABCAAcAAAATAA0AAABCAAgAAAATAA4AAABCAAkAAAATAA4AAABCAAoAAAATAA4AAABCAAsAAAATAA4AAABCAAwAAAATAA4AAABCAA0AAAATAA8AAABCAA4AAAAQAA4AAABDAAcAAAATAA0AAABDAAgAAAATAA4AAABDAAkAAAATAA4AAABDAAoAAAATAA4AAABDAAsAAAATAA4AAABDAAwAAAATAA4AAABDAA0AAAATAA8AAABDAA4AAAARAA4AAABEAAgAAAATAA4AAABEAAkAAAATAA4AAABEAAoAAAATAA4AAABEAAsAAAATAA4AAABEAAwAAAATAA4AAABEAA0AAAATAA8AAABEAA4AAAAQAA4AAABFAAcAAAATAA0AAABFAAgAAAATAA4AAABFAAkAAAATAA4AAABFAAoAAAATAA4AAABFAAsAAAATAA4AAABFAAwAAAATAA4AAABFAA0AAAATAA8AAABFAA4AAAARAA4AAABGAAcAAAAUAA0AAABGAAgAAAAUAA4AAABGAAkAAAAUAA4AAABGAAoAAAAUAA4AAABGAAsAAAAUAA4AAABGAAwAAAAUAA4AAAAxAA0AAAASAA8AAAAyAA0AAAATAA8AAAAzAA0AAAATAA8AAAA0AA0AAAATAA8AAAA1AA0AAAATAA8AAAA2AA0AAAATAA8AAAA3AA0AAAATAA8AAAA4AA0AAAATAA8AAAA5AA0AAAATAA8AAAA6AA0AAAATAA8AAAA7AA0AAAATAA8AAAA8AA0AAAATAA8AAAA9AA0AAAATAA8AAAA+AA0AAAATAA8AAAA/AA0AAAATAA8AAABAAA0AAAATAA8AAABBAA8AAAAPAA8AAABCAA8AAAAQAA8AAABDAA8AAAAQAA8AAABEAA8AAAAQAA8AAABFAA8AAAARAA8AAABGAA0AAAAUAA8AAABEAAcAAAATAA0AAAA=")
tile_set = ExtResource("1_4jywj")

[node name="Buttons" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAMAA4AAAAVAA0AAAANAA4AAAAWAA0AAAAOAA4AAAAWAA0AAAAPAA4AAAAWAA0AAAAQAA4AAAAWAA0AAAARAA4AAAAWAA0AAAASAA4AAAAWAA0AAAATAA4AAAAWAA0AAAAUAA4AAAAWAA0AAAAVAA4AAAAWAA0AAAAWAA4AAAAWAA0AAAAXAA4AAAAWAA0AAAAYAA4AAAAWAA0AAAAZAA4AAAAWAA0AAAAaAA4AAAAWAA0AAAAbAA4AAAAXAA0AAAAbAA8AAAAXAA4AAAAbABAAAAAXAA8AAAAaABAAAAAWAA8AAAAZABAAAAAWAA8AAAAYABAAAAAWAA8AAAAXABAAAAAWAA8AAAAWABAAAAAWAA8AAAAVABAAAAAWAA8AAAAUABAAAAAWAA8AAAATABAAAAAWAA8AAAASABAAAAAWAA8AAAARABAAAAAWAA8AAAAQABAAAAAWAA8AAAAPABAAAAAWAA8AAAAOABAAAAAWAA8AAAANABAAAAAWAA8AAAAMABAAAAAVAA8AAAAMAA8AAAAVAA4AAAANAA8AAAAWAA4AAAAOAA8AAAAWAA4AAAAPAA8AAAAWAA4AAAAQAA8AAAAWAA4AAAARAA8AAAAWAA4AAAASAA8AAAAWAA4AAAATAA8AAAAWAA4AAAAUAA8AAAAWAA4AAAAVAA8AAAAWAA4AAAAWAA8AAAAWAA4AAAAXAA8AAAAWAA4AAAAYAA8AAAAWAA4AAAAZAA8AAAAWAA4AAAAaAA8AAAAWAA4AAAAbABEAAAAXAA0AAAAbABMAAAAXAA8AAAAbABIAAAAXAA4AAAAaABMAAAAWAA8AAAAZABMAAAAWAA8AAAAYABMAAAAWAA8AAAAXABMAAAAVAA8AAAAXABIAAAAVAA4AAAAXABEAAAAVAA0AAAAYABEAAAAWAA0AAAAZABEAAAAWAA0AAAAaABEAAAAWAA0AAAAYABIAAAAWAA4AAAAZABIAAAAWAA4AAAAaABIAAAAWAA4AAAAUABEAAAAXAA0AAAATABEAAAAWAA0AAAASABEAAAAWAA0AAAARABEAAAAWAA0AAAAQABEAAAAWAA0AAAAPABEAAAAWAA0AAAAOABEAAAAWAA0AAAANABEAAAAWAA0AAAAMABEAAAAVAA0AAAAMABMAAAAVAA8AAAAMABIAAAAVAA4AAAANABMAAAAWAA8AAAAOABMAAAAWAA8AAAAPABMAAAAWAA8AAAAQABMAAAAWAA8AAAARABMAAAAWAA8AAAASABMAAAAWAA8AAAATABMAAAAWAA8AAAAUABMAAAAXAA8AAAAUABIAAAAXAA4AAAATABIAAAAWAA4AAAASABIAAAAWAA4AAAARABIAAAAWAA4AAAAQABIAAAAWAA4AAAAPABIAAAAWAA4AAAAOABIAAAAWAA4AAAANABIAAAAWAA4AAABDAAgAAAAVAA0AAABDAAkAAAAVAA8AAABEAAgAAAAXAA0AAABEAAkAAAAXAA8AAAA=")
tile_set = ExtResource("1_4jywj")

[node name="MainMenuScreen" type="Control" parent="Buttons"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Quit" type="TextureButton" parent="Buttons/MainMenuScreen"]
offset_left = 185.0
offset_top = 140.0
offset_right = 223.0
offset_bottom = 154.0

[node name="QuitLabel" type="Label" parent="Buttons/MainMenuScreen/Quit"]
layout_mode = 0
offset_right = 38.0
offset_bottom = 14.0
text = "Quit"
label_settings = ExtResource("3_0qhfd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="TextureButton" parent="Buttons/MainMenuScreen"]
offset_left = 97.0
offset_top = 140.0
offset_right = 167.0
offset_bottom = 154.0

[node name="OptionsLabel" type="Label" parent="Buttons/MainMenuScreen/Options"]
offset_right = 70.0
offset_bottom = 14.0
text = "Options"
label_settings = ExtResource("3_0qhfd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Select Level" type="TextureButton" parent="Buttons/MainMenuScreen"]
offset_left = 97.0
offset_top = 116.0
offset_right = 223.0
offset_bottom = 129.0

[node name="SelectLevelLabel" type="Label" parent="Buttons/MainMenuScreen/Select Level"]
offset_right = 126.0
offset_bottom = 14.0
text = "Select Level"
label_settings = ExtResource("3_0qhfd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Options" type="Control" parent="Buttons"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Fullscreen" type="TextureButton" parent="Buttons/Options"]
layout_mode = 0
offset_left = 538.0
offset_top = 67.0
offset_right = 550.0
offset_bottom = 75.0
toggle_mode = true
texture_pressed = ExtResource("4_qdhhj")

[node name="FullscreenLabel" type="Label" parent="Buttons/Options/Fullscreen"]
layout_mode = 0
offset_left = -145.0
offset_top = -4.0
offset_bottom = 12.0
text = "Fullscreen mode"
label_settings = SubResource("LabelSettings_eg4w2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="Buttons/Options"]
layout_mode = 0
offset_left = 479.0
offset_top = 85.0
offset_right = 559.0
offset_bottom = 101.0
theme_override_icons/grabber = ExtResource("6_y8xgh")
theme_override_icons/grabber_highlight = ExtResource("7_uhyb4")
theme_override_styles/slider = SubResource("StyleBoxTexture_r3tvi")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_3nawr")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_yqvs0")
max_value = 1.0
step = 0.001

[node name="FullscreenLabel2" type="Label" parent="Buttons/Options/HSlider"]
layout_mode = 0
offset_left = -86.0
offset_right = 1.0
offset_bottom = 15.0
text = "Volume"
label_settings = SubResource("LabelSettings_td363")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Return" type="TextureButton" parent="Buttons/Options"]
layout_mode = 0
offset_left = 520.0
offset_top = 112.0
offset_right = 560.0
offset_bottom = 127.0

[node name="Label" type="Label" parent="Buttons/Options/Return"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 16.0
text = "Return"
label_settings = ExtResource("3_0qhfd")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lqtdj")
}

[connection signal="pressed" from="Buttons/MainMenuScreen/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Buttons/MainMenuScreen/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Buttons/MainMenuScreen/Select Level" to="." method="_on_select_level_pressed"]
[connection signal="toggled" from="Buttons/Options/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="drag_ended" from="Buttons/Options/HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="value_changed" from="Buttons/Options/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Buttons/Options/Return" to="." method="_on_return_pressed"]
